--- a/src/interface_enchere/sample.fxml
+++ b/src/interface_enchere/sample.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interface_enchere.Controller">
    <children>
       <Button fx:id="venduBtn" layoutX="331.0" layoutY="396.0" mnemonicParsing="false" onAction="#vendu" prefHeight="61.0" prefWidth="146.0" text="Vendu" textAlignment="CENTER">
          <font>
